[gd_scene load_steps=3 format=3 uid="uid://cm87jwuf2yk55"]

[ext_resource type="Script" path="res://scripts/bossBullet.gd" id="1_7wdd4"]
[ext_resource type="Texture2D" uid="uid://2cb0m7rcug15" path="res://sprites/SnowBall.png" id="2_jagjk"]

[node name="tire" type="Area2D"]
scale = Vector2(0.25, 0.25)
collision_layer = 8
collision_mask = 20
script = ExtResource("1_7wdd4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(4, 4)
texture = ExtResource("2_jagjk")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(4, 4)
polygon = PackedVector2Array(18, -32, 18, -30.2, 28, -25.2, 28, -19.2, 32, -17.2, 32, -12, 32, 12, 27.5, 26, 25.5, 26, 14.3, 32, -14.5, 32, -28, 25.2, -28, 18.7, -32, 13.4, -32, -16.2, -31.4, -18, -30.2, -18, -25.2, -28, -19.2, -28, -17.2, -32, -12, -32, 12, -32)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
